<resources>
    <string name="app_name">Android3DZ2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_name">The name</string>
    <string name="the_status">The status</string>
    <string name="the_gender">The gender</string>
    <string name="the_name_of_the_episode">The name of the episode.</string>
    <string name="the_air_date_of_the_episode">The air date of the episode.</string>
    <string name="time_at_which_the_episode_was_created_in_the_database">Time at which the episode was created in the database.</string>
    <string name="the_code_of_the_episode">The code of the episode.</string>
    <string name="the_location">the location</string>
    <string name="the_dimension_in_which_the_location_is_located">The dimension in which the location is located.</string>
    <string name="the_type_of_the_location">The type of the location.</string>
    <string name="time_at_which_the_location_was_created_in_the_database">Time at which the location was created in the database.</string>
    <string name="time_at_which_the_location_was_created_in_the_databas">time_at_which_the_location_was_created_in_the_databas</string>
    <string name="filter">filter</string>
    <string name="name">name</string>
    <string name="alive">alive</string>
    <string name="dead">dead</string>
    <string name="unknown">unknown</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="apply">Apply</string>
    <string name="status">Status</string>
</resources>